<resources>
    <string name="app_name">StudentStatistics</string>

    <string name="title_section1">Statistics</string>
    <string name="title_section2">Students</string>
    <string name="title_section3">Add Student</string>

    <string name="action_settings">Settings</string>

    <string name="student_id">Student ID</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="q5">Q5</string>
    <string name="stud">Stud</string>
    <string name="high_score">High Score</string>
    <string name="low_score">Low Score</string>
    <string name="avg_score">Average</string>
    <string name="save_student">Save Student</string>
    <string name="no_students">No Students</string>

</resources>
